--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,81 @@
-.App {
-  text-align: center;
+body{
+  background-image: url('food.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ListMeals_container-title{
+  background-color: #fcfeff;
+  font-family: 'Montserrat', sans-serif;
+  padding: 15px;
+  border-radius: 20px;
+}
+
+.btn_add{
+  background-color: #77cf40;
+  font-size: 17px;
+  border-radius: 20px;
+  padding: 15px;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.dtn_delete{
+  font-family: 'Montserrat', sans-serif;
+  background: none;
+  font-size: 12px;
+  color: red;
+  border: 0;
+  font-weight: bold;
+}
+
+.App{
+  display: flex;
+  justify-content: space-around;
+}
+
+ .MealsAndIngrediets_container{
+  width: 70%;
+} 
+
+.inputForm{
+  width: 70%;
+  height: 20px;
+  padding: 10px;
+  border-radius: 20px;
+  display: block;
+  margin-top: 30px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+textarea{
+  width: 70%;
+  height: 200px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  display: block;
+  margin-top: 30px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.selectedColor{
+  background-color: #fedb00;
+}
+
+.defaultColor{
+  background-color: #dcedf7;
+}
+
+.first-name-form{
+  color: white;
+}
+
+.text-form{
+  font-size: 14px;
+  color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +84,3 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
