--- a/src/App.css
+++ b/src/App.css
@@ -112,8 +112,19 @@ textarea{
 @media all and (max-width: 500px) {
   .ListMeals_container-title {
     font-size: 18px;
-    padding: 5px;
+    padding: 10px;
     text-align: center;
   }
+
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .ListMeals_plans {
+    width:100%;
+    text-wrap: wrap;
+  }
 }
+
 
